fix(build): jshint Gruntfile.js

--- a/docs/partials/api/frapontillo.highcharts.directives.chart.html
+++ b/docs/partials/api/frapontillo.highcharts.directives.chart.html
@@ -7,9 +7,9 @@
 <div class="description"><div class="frapontillo-highcharts-directives-chart-page"><p>Directive to build HighChart charts according to the specified parameters.</p>
 </div></div>
 <h2 id="dependencies">Dependencies</h2>
-<ul class="dependencies"><li><code ng:non-bindable=""><a href="api/ng.$filter">$filter</a></code>
+<ul class="dependencies"><li><code ng:non-bindable=""><a href="#/api/ng.$filter">$filter</a></code>
 </li>
-<li><code ng:non-bindable=""><a href="api/ng.$log">$log</a></code>
+<li><code ng:non-bindable=""><a href="#/api/ng.$log">$log</a></code>
 </li>
 </ul>
 <h2 id="usage">Usage</h2>
