--- a/docs/docs/partials/api/frapontillo.highcharts.providers.$chartDefaults.html
+++ b/docs/docs/partials/api/frapontillo.highcharts.providers.$chartDefaults.html
@@ -5,6 +5,6 @@
 </h1>
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="frapontillo-highcharts-providers-chartdefaults-page"><p>Service to retrieve every chart default configuration.
-The <code>$chartDefaults</code> service is later used by the <a href="#/api/frapontillo.highcharts.directives.chart">frapontillo.highcharts.directives.chart</a> directive to retrieve all available defaults.</p>
+The <code>$chartDefaults</code> service is later used by the <a href="#/api/frapontillo.highcharts.directives.directive:chart">frapontillo.highcharts.directives.directive:chart</a> directive to retrieve all available defaults.</p>
 </div></div>
 </div>
