--- a/docs/docs/partials/api/frapontillo.highcharts.providers.$chartDefaultsProvider.html
+++ b/docs/docs/partials/api/frapontillo.highcharts.providers.$chartDefaultsProvider.html
@@ -5,7 +5,8 @@
 </h1>
 <div><h2 id="description">Description</h2>
 <div class="description"><div class="frapontillo-highcharts-providers-chartdefaultsprovider-page"><p><code>$chartDefaultsProvider</code> can be used during the config phase of your app to add new chart defaults options.
-Those options can later be used by the <a href="#/api/frapontillo.highcharts.directives.directive:chart">frapontillo.highcharts.directives.directive:chart</a> directive to retrieve all available defaults.</p>
+Those options can later be used by the <a href="#/api/frapontillo.highcharts.directives.directive:chart">frapontillo.highcharts.directives.directive:chart</a> directive to
+retrieve the desired default.</p>
 </div></div>
 <div class="member method"><h2 id="methods">Methods</h2>
 <ul class="methods"><li><h3 id="methods_adddefault">addDefault(name, options)</h3>
